--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/blog_db
+spring.profiles.active=prod
+
+spring.datasource.url=jdbc:postgresql://db:5432/myblogdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,3 +9,6 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=false
 hibernate.format_sql=false
 hibernate.hbm2ddl.auto=none
+
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
