--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -10,3 +10,5 @@ hibernate.hbm2ddl.auto=none
 
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+
+spring.sql.init.mode=always
