--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
 spring.sql.init.mode=always
+
+app.cors.allowed-origins=http://localhost:8081,http://front:80,http://nginx:80
+
+logging.level.root=INFO
+logging.level.com.alextim.myblog=DEBUG
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
