--- a/back/src/test/resources/application.properties
+++ b/back/src/test/resources/application.properties
@@ -10,3 +10,10 @@ hibernate.hbm2ddl.auto=update
 
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+
+logging.level.root=INFO
+logging.level.com.alextim.myblog=DEBUG
+
+app.cors.allowed-origins=
+
+spring.sql.init.mode=never
