--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,34 @@
 version: '3.8'
 
 services:
-  app:
-    container_name: app
+  front:
+    container_name: front
+    build:
+      context: ./front
+    ports:
+      - 8081:80
+    depends_on:
+      back:
+        condition: service_healthy
+
+  back:
+    container_name: back
     build:
       context: ./back
     ports:
       - 8080:8080
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
     volumes:
       - ./build/libs/my-blog.jar:/app/my-blog.jar
     command: java -jar /app/my-blog.jar
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
   db:
     image: postgres:13.3
     container_name: db
@@ -20,7 +39,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: myblogdb
     volumes:
-      - db-data:/val/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
 
 volumes:
   db-data:
